
[TestGenerate/multi_file - 1]
package multifile

//go:generate go run github.com/utgwkk/mockgengen/cmd/mockgengen -package mock_bar -out ./mock_bar.go . MockBars
var MockBars = []any{
    new(IBar),
}
//go:generate go run github.com/utgwkk/mockgengen/cmd/mockgengen -package mock_foo -out ./mock_foo.go . MockFoos
var MockFoos = []any{
    new(IFoo),
}

---

[TestGenerate/multi_line - 1]
package multiline

//go:generate go run github.com/utgwkk/mockgengen/cmd/mockgengen -package mock_foo -out ./mock_foo.go . MockFoos
var MockFoos = []any{
    new(IBar),
    new(IFoo),
}

---
